--- a/index.html
+++ b/index.html
@@ -22,8 +22,40 @@
 
 <body>
 
-    <h1>Hello world</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus expedita sunt pariatur! Fuga maxime molestiae qui ipsam nisi. Iste fuga dicta dignissimos ut quia, blanditiis alias error sapiente reiciendis libero.</p>
+    <!-- Navigation -->
+    <nav>
+        <li><a href="#">Home</a></li>
+        <hr>
+        <li><a href="#">Basics of Music Data</a></li>
+        <hr>
+        <li><a href="#">Notation Basics</a></li>
+        <hr>
+        <li><a href="#">Encoding Basics for Notation</a></li>
+        <hr>
+        <li><a href="#">Computational Analysis of Notated Music</a></li>
+        <hr>
+        <li><a href="#">Standards in Curation</a></li>
+        <hr>
+        <li><a href="#">Challenges to Music Curation</a></li>
+        <hr>
+        <li><a href="#">Music as Sound</a></li>
+        <hr>
+        <li><a href="#">Analysing & Extracting Meaning from Audio</a></li>
+        <hr>
+        <li><a href="#">Audio Similarity & Transcription</a></li>
+    </nav>
+
+
+    <!-- Page content -->
+    <section class="content">
+
+        <h1 class="page_title">Basics of Music Data</h1>
+        <h2 class="page_subtitle">Week 1</h2>
+
+        <h2>Theme Introduction</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus expedita sunt pariatur! Fuga maxime molestiae qui ipsam nisi. Iste fuga dicta dignissimos ut quia, blanditiis alias error sapiente reiciendis libero.</p>
+
+    </section>
     
 
     <!-- Back to top button -->
