--- a/week1.html
+++ b/week1.html
@@ -24,9 +24,9 @@
 
     <!-- Navigation -->
     <nav>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <hr>
-        <li><a href="week1.html">Basics of Music Data</a></li>
+        <li><a href="#">Basics of Music Data</a></li>
         <hr>
         <li><a href="week2.html">Notation Basics</a></li>
         <hr>
@@ -49,13 +49,11 @@
     <!-- Page content -->
     <section class="content">
 
-        <h1 class="page_title">Music Curation & Analytics</h1>
-        <h2 class="page_subtitle">Home</h2>
+        <h1 class="page_title">Basics of Music Data</h1>
+        <h2 class="page_subtitle">Week 1</h2>
 
         <h2>Introduction</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus expedita sunt pariatur! Fuga maxime molestiae qui ipsam nisi. Iste fuga dicta dignissimos ut quia, blanditiis alias error sapiente reiciendis libero.</p>
-        
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     </section>
     
