--- a/week10.html
+++ b/week10.html
@@ -24,7 +24,7 @@
 
     <!-- Navigation -->
     <nav>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <hr>
         <li><a href="week1.html">Basics of Music Data</a></li>
         <hr>
@@ -42,20 +42,18 @@
         <hr>
         <li><a href="week9.html">Analysing & Extracting Meaning from Audio</a></li>
         <hr>
-        <li><a href="week10.html">Audio Similarity & Transcription</a></li>
+        <li><a href="#">Audio Similarity & Transcription</a></li>
     </nav>
 
 
     <!-- Page content -->
     <section class="content">
 
-        <h1 class="page_title">Music Curation & Analytics</h1>
-        <h2 class="page_subtitle">Home</h2>
+        <h1 class="page_title">Audio Similarity & Transcription</h1>
+        <h2 class="page_subtitle">Week 10</h2>
 
         <h2>Introduction</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus expedita sunt pariatur! Fuga maxime molestiae qui ipsam nisi. Iste fuga dicta dignissimos ut quia, blanditiis alias error sapiente reiciendis libero.</p>
-        
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     </section>
     
