--- a/week4.html
+++ b/week4.html
@@ -24,7 +24,7 @@
 
     <!-- Navigation -->
     <nav>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <hr>
         <li><a href="week1.html">Basics of Music Data</a></li>
         <hr>
@@ -32,7 +32,7 @@
         <hr>
         <li><a href="week3.html">Encoding Basics for Notation</a></li>
         <hr>
-        <li><a href="week4.html">Computational Analysis of Notated Music</a></li>
+        <li><a href="#">Computational Analysis of Notated Music</a></li>
         <hr>
         <li><a href="week5.html">Standards in Curation</a></li>
         <hr>
@@ -49,13 +49,11 @@
     <!-- Page content -->
     <section class="content">
 
-        <h1 class="page_title">Music Curation & Analytics</h1>
-        <h2 class="page_subtitle">Home</h2>
+        <h1 class="page_title">Computational Analysis of Notated Music</h1>
+        <h2 class="page_subtitle">Week 4</h2>
 
         <h2>Introduction</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus expedita sunt pariatur! Fuga maxime molestiae qui ipsam nisi. Iste fuga dicta dignissimos ut quia, blanditiis alias error sapiente reiciendis libero.</p>
-        
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     </section>
     
