--- a/index.html
+++ b/index.html
@@ -53,9 +53,12 @@
         <h2 class="page_subtitle">Home</h2>
 
         <h2>Introduction</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus expedita sunt pariatur! Fuga maxime molestiae qui ipsam nisi. Iste fuga dicta dignissimos ut quia, blanditiis alias error sapiente reiciendis libero.</p>
-        
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <p>Welcome to my portfolio for Music Curation & Analytics 2022! Use the menu on the right to navigate between lab weeks &#128073;</p>
+
+        <h2>Submission Information</h2>
+        <p>Name: Timothy Wang</p>
+        <p>Matric: 2556936</p>
+
 
     </section>
     
