--- a/week1.html
+++ b/week1.html
@@ -52,11 +52,53 @@
         <h1 class="page_title">Basics of Music Data</h1>
         <h2 class="page_subtitle">Week 1</h2>
 
-        <h2>Introduction</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus expedita sunt pariatur! Fuga maxime molestiae qui ipsam nisi. Iste fuga dicta dignissimos ut quia, blanditiis alias error sapiente reiciendis libero.</p>
+        <h2>Theme</h2>
+        <p class="task">Identify a theme for your dataset. This will be the central, cohesive strand that will bring your data together. It can be an artist, composer, songwriter, performer, album, larger work (i.e. opera, musical, etc.), time period, genre, archival grouping, etc.</p>
+        <p>The theme for this dataset is Beethoven&apos;s String Quartet No. 4 in C Minor (Op. 18, No. 4).</p>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/XQ-oZvbdwxA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <p>Specifically, the focus will be on the first movement of this piece.</p>
+
+        <hr>
+
+        <h2>Challenges</h2>
+        <p class="task">Based on your own experience, what do you think are some challenges to working with music and music-related data (perhaps related to access, curation, distribution, etc.)? How does your selected theme display some of these challenges? Describe the current manifestations of data relating to your selected theme, discussing how it is presently curated (collected and gathered) and how it is presented, described, and analysed.</p>
+
+        <p>In my experience, there are a number of current issues with working with music data in areas such as:</p>
+        <ul>
+            <li>Sharing digital sheet music</li>
+            <li>Accessing/distributing music</li>
+            <li>Curation of music</li>
+        </ul>
+
+        <p>Issues with sharing digital sheet music:</p>
+        <ul>
+            <li>Digital sheet music data has many different standards (e.g. Midi, MusicXML, proprietary file types like Sibelius&apos;s .sib or Musescore&apos;s .mscz format.</li>
+            <li>Usually to share a piece of music data, a format must be converted to another standard which both softwares can understand and can convert to their own native format (e.g. sharing music between Sibelius and Musescore usually involves first converting to MusicXML, which both softwares can read and convert themselves).</li>
+            <li>Quartet: The sheet music may not be easily available in  a standard digital format which can be read by certain softwares - the piece was written long before the time of digital scores and, therefore, before the standards where many modern pieces can be found in.</li>
+        </ul>
+
+        <p>Issues with access/distribution:</p>
+        <ul>
+            <li>Online libraries such as IMSLP contain many different versions of the same piece.</li>
+            <li>Versions can vary drastically in attributes such as scan/audio quality, technical accuracy, and subjective interpretations of the piece (e.g. performance interpretation, sheet music notes, etc.).</li>
+            <li>This can be challenging for a person to choose the version they want to learn/listen to/analyse because of this variation between sources.</li>
+            <li>Quartet: Many versions of the suite can be found online or in libraries, a person who wishes to listen to the suite must choose from many different recordings, sheet music, interpretations, etc.</li>
+        </ul>
+
+        <p>Issues with curation:</p>
+        <ul>
+            <li>Metadata for pieces of music can vary depending on the source as well as contextual information.</li>
+            <li>For example, the “duration” of a piece can depend on the tempo of the conductor of a specific performance or interpretation - one conductor may interpret a tempo marking to be slower or faster than another conductor.</li>
+            <li>Organising music data can be challenging due to the lack of a uniform standard for sharing music - e.g. digital recordings can have varying compression, bit rate, file format, etc. which can make it difficult to objectively analyse, compare, and organise such files</li>
+            <li>Metadata for these files can have differences - some may have more descriptions than others, some may have different standards for labelling specific data (for example, “number of movements” could be labelled as &quot;3&quot; or &quot;Three&quot; or &quot;III&quot; within the metadata of a file)</li>
+            <li>Quartet: Metadata for the suite can have great variation depending on the source - orchestral pieces of music generally offer a large amount of creative freedom to the conductor/performers of a performance and properties such as tempo & dynamics can be largely up to interpretation. This results in fluctuations in metadata for the same piece - which can make it challenging to determine or analyse the piece.</li>
+        </ul>
+
+        <p>TODO: Describe the current manifestations of data relating to your selected theme, discussing how it is presently curated (collected and gathered) and how it is presented, described, and analysed.</p>
 
     </section>
-    
 
     <!-- Back to top button -->
     <a id="back2top" title="Scroll to the Top" class="tooltip"></a>
