--- a/week2.html
+++ b/week2.html
@@ -52,8 +52,21 @@
         <h1 class="page_title">Notation Basics</h1>
         <h2 class="page_subtitle">Week 2</h2>
 
-        <h2>Introduction</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus expedita sunt pariatur! Fuga maxime molestiae qui ipsam nisi. Iste fuga dicta dignissimos ut quia, blanditiis alias error sapiente reiciendis libero.</p>
+        <h2>Converting a PDF to Musescore</h2>
+        <p class="task">Identify a piece of music to download and edit.</p>
+        <p>Beethoven's String Quartet No. 4 (Op. 18 No. 4), <a href="https://imslp.org/wiki/Special:ReverseLookup/21518">click here</a> to view.</p>
+        <p class="task">Download the PDF and then convert it to MuseScore. Edit at least 10 bars in MuseScore.</p>
+        <p>Edited MuseScore file:</p>
+        <img src="portfolio_assets/week-2/converted.png" alt="" width="500">
+        <p>Download the file <a href="portfolio_assets/week-2/musescore_file.mscz" download>here</a>.</p>
+
+        <p>Some of the changes needed:</p>
+        <ul>
+            <li>Had to add score information (e.g. title, composer, tempo text, etc.).</li>
+            <li>Instrumentation was incorrect, converted score had all parts as &quot;voice&quot; instead of the correct quartet instruments.</li>
+            <li>Some ornamentation and articulation had to be added.</li>
+        </ul>
+
 
     </section>
     
