--- a/week3.html
+++ b/week3.html
@@ -79,7 +79,7 @@
 
         <hr>
 
-        <h2>Comparing MusixXML & MEI</h2>
+        <h2>Comparing MusicXML & MEI</h2>
         <p class="task">Compare 3 elements in the MusicXML file to the corresponding ones in MEI. Think about: which attributes can be employed in each standard, which parents and children can be used, and try to think of the implications of these differences.</p>
 
         <p>Where MusicXML and MEI share many differences, such as both being written in the XML format, the two formats differ as they were designed and built upon different primary purposes. Where MusicXML exists as an interchange between different proprietary notation software formats, focusing on western notational accuracy, MEI emphasises human readability through its structure, and extensive coverage of content outside of notation alone.</p>
