--- a/week4.html
+++ b/week4.html
@@ -52,8 +52,20 @@
         <h1 class="page_title">Computational Analysis of Notated Music</h1>
         <h2 class="page_subtitle">Week 4</h2>
 
-        <h2>Introduction</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus expedita sunt pariatur! Fuga maxime molestiae qui ipsam nisi. Iste fuga dicta dignissimos ut quia, blanditiis alias error sapiente reiciendis libero.</p>
+        <h2>Extract Features from MIDI</h2>
+        <p class="task">Generate a jSymbolic analysis of your piece, and select a group of features that you think is most interesting and relevant to your particular piece.</p>
+        <p>Download the csv <a href="portfolio_assets/week-4/extracted_feature_values.csv" download>here</a>.</p>
+
+        <hr>
+
+        <h2>Analyse Feature Values</h2>
+        <p class="task">Generate a piano roll and pitch histogram of your piece using music21.</p>
+        <p>Generated Piano Roll:</p>
+        <img src="portfolio_assets/week-4/piano_roll.png" width="500">
+        <p>Generated Pitch Histogram:</p>
+        <img src="portfolio_assets/week-4/pitch_histogram.png" width="500">
+        
+
 
     </section>
     
