Bottom of page navigation

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
         <h2>Introduction</h2>
         <p>Welcome to my portfolio for Music Curation & Analytics 2022! Use the menu on the right to navigate between lab weeks &#128073;</p>
+        <p>Alternatively, go to the next or previous lab from the bottom of the page &#128071;</p>
 
         <h2>Submission Information</h2>
         <p>Name: Timothy Wang</p>
@@ -62,6 +63,11 @@
 
     </section>
     
+    <!-- Next/previous page bar -->
+    <div class="bottom-nav">
+        <a href="week1.html" id="next-week">Basics of Music Data &gt;</a>
+    </div>
+    <br>
 
     <!-- Back to top button -->
     <a id="back2top" title="Scroll to the Top" class="tooltip"></a>
