--- a/week2.html
+++ b/week2.html
@@ -57,7 +57,7 @@
         <p>Beethoven's String Quartet No. 4 (Op. 18 No. 4), <a href="https://imslp.org/wiki/Special:ReverseLookup/21518">click here</a> to view.</p>
         <p class="task">Download the PDF and then convert it to MuseScore. Edit at least 10 bars in MuseScore.</p>
         <p>Edited MuseScore file:</p>
-        <img src="portfolio_assets/week-2/converted.png" alt="" width="500">
+        <img src="portfolio_assets/week-2/converted.png" width="500">
         <p>Download the file <a href="portfolio_assets/week-2/musescore_file.mscz" download>here</a>.</p>
 
         <p>Some of the changes needed:</p>
@@ -69,7 +69,13 @@
 
 
     </section>
-    
+
+    <!-- Next/previous page bar -->
+    <div class="bottom-nav">
+        <a href="week1.html" id="previous-week">&lt; Basics of Music Data</a>
+        <a href="week3.html" id="next-week">Encoding Basics for Notation &gt;</a>
+    </div>
+    <br>
 
     <!-- Back to top button -->
     <a id="back2top" title="Scroll to the Top" class="tooltip"></a>
