--- a/week3.html
+++ b/week3.html
@@ -144,6 +144,12 @@
 
     </section>
     
+    <!-- Next/previous page bar -->
+    <div class="bottom-nav">
+        <a href="week2.html" id="previous-week">&lt; Notation Basics</a>
+        <a href="week4.html" id="next-week">Computational Analysis of Notated Music &gt;</a>
+    </div>
+    <br>
 
     <!-- Back to top button -->
     <a id="back2top" title="Scroll to the Top" class="tooltip"></a>
