--- a/week5.html
+++ b/week5.html
@@ -57,6 +57,12 @@
 
     </section>
     
+    <!-- Next/previous page bar -->
+    <div class="bottom-nav">
+        <a href="week4.html" id="previous-week">&lt; Computational Analysis of Notated Music</a>
+        <a href="week7.html" id="next-week">Challenges to Music Curation &gt;</a>
+    </div>
+    <br>
 
     <!-- Back to top button -->
     <a id="back2top" title="Scroll to the Top" class="tooltip"></a>
