--- a/week7.html
+++ b/week7.html
@@ -57,6 +57,12 @@
 
     </section>
     
+    <!-- Next/previous page bar -->
+    <div class="bottom-nav">
+        <a href="week5.html" id="previous-week">&lt; Standards in Curation</a>
+        <a href="week8.html" id="next-week">Music as Sound &gt;</a>
+    </div>
+    <br>
 
     <!-- Back to top button -->
     <a id="back2top" title="Scroll to the Top" class="tooltip"></a>
