--- a/week8.html
+++ b/week8.html
@@ -57,6 +57,12 @@
 
     </section>
     
+    <!-- Next/previous page bar -->
+    <div class="bottom-nav">
+        <a href="week7.html" id="previous-week">&lt; Challenges to Music Curation</a>
+        <a href="week9.html" id="next-week">Analysing & Extracting Meaning from Audio &gt;</a>
+    </div>
+    <br>
 
     <!-- Back to top button -->
     <a id="back2top" title="Scroll to the Top" class="tooltip"></a>
