--- a/week9.html
+++ b/week9.html
@@ -57,6 +57,12 @@
 
     </section>
     
+    <!-- Next/previous page bar -->
+    <div class="bottom-nav">
+        <a href="week8.html" id="previous-week">&lt; Music as Sound</a>
+        <a href="week10.html" id="next-week">Audio Similarity & Transcription &gt;</a>
+    </div>
+    <br>
 
     <!-- Back to top button -->
     <a id="back2top" title="Scroll to the Top" class="tooltip"></a>
