--- a/week1.html
+++ b/week1.html
@@ -100,6 +100,13 @@
 
     </section>
 
+    <!-- Next/previous page bar -->
+    <div class="bottom-nav">
+        <a href="index.html" id="previous-week">&lt; Home</a>
+        <a href="week2.html" id="next-week">Notation Basics &gt;</a>
+    </div>
+    <br>
+
     <!-- Back to top button -->
     <a id="back2top" title="Scroll to the Top" class="tooltip"></a>
     <div class="scrollbar-container">
