--- a/week10.html
+++ b/week10.html
@@ -57,6 +57,11 @@
 
     </section>
     
+    <!-- Next/previous page bar -->
+    <div class="bottom-nav">
+        <a href="week9.html" id="previous-week">&lt; Analysing & Extracting Meaning from Audio</a>
+    </div>
+    <br>
 
     <!-- Back to top button -->
     <a id="back2top" title="Scroll to the Top" class="tooltip"></a>
