--- a/week4.html
+++ b/week4.html
@@ -69,6 +69,12 @@
 
     </section>
     
+    <!-- Next/previous page bar -->
+    <div class="bottom-nav">
+        <a href="week3.html" id="previous-week">&lt; Encoding Basics for Notation</a>
+        <a href="week5.html" id="next-week">Standards in Curation &gt;</a>
+    </div>
+    <br>
 
     <!-- Back to top button -->
     <a id="back2top" title="Scroll to the Top" class="tooltip"></a>
