More style changes, week 5 page start

--- a/week10.html
+++ b/week10.html
@@ -42,7 +42,7 @@
         <hr>
         <li><a href="week9.html">Analysing & Extracting Meaning from Audio</a></li>
         <hr>
-        <li><a href="#">Audio Similarity & Transcription</a></li>
+        <li class="active-page"><a href="#">Audio Similarity & Transcription</a></li>
     </nav>
 
 
