--- a/week2.html
+++ b/week2.html
@@ -28,7 +28,7 @@
         <hr>
         <li><a href="week1.html">Basics of Music Data</a></li>
         <hr>
-        <li><a href="#">Notation Basics</a></li>
+        <li class="active-page"><a href="#">Notation Basics</a></li>
         <hr>
         <li><a href="week3.html">Encoding Basics for Notation</a></li>
         <hr>
