--- a/week4.html
+++ b/week4.html
@@ -32,7 +32,7 @@
         <hr>
         <li><a href="week3.html">Encoding Basics for Notation</a></li>
         <hr>
-        <li><a href="#">Computational Analysis of Notated Music</a></li>
+        <li class="active-page"><a href="#">Computational Analysis of Notated Music</a></li>
         <hr>
         <li><a href="week5.html">Standards in Curation</a></li>
         <hr>
