--- a/week8.html
+++ b/week8.html
@@ -38,7 +38,7 @@
         <hr>
         <li><a href="week7.html">Challenges to Music Curation</a></li>
         <hr>
-        <li><a href="#">Music as Sound</a></li>
+        <li class="active-page"><a href="#">Music as Sound</a></li>
         <hr>
         <li><a href="week9.html">Analysing & Extracting Meaning from Audio</a></li>
         <hr>
