--- a/week9.html
+++ b/week9.html
@@ -40,7 +40,7 @@
         <hr>
         <li><a href="week8.html">Music as Sound</a></li>
         <hr>
-        <li><a href="#">Analysing & Extracting Meaning from Audio</a></li>
+        <li class="active-page"><a href="#">Analysing & Extracting Meaning from Audio</a></li>
         <hr>
         <li><a href="week10.html">Audio Similarity & Transcription</a></li>
     </nav>
