--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- Navigation -->
     <nav>
-        <li><a href="#">Home</a></li>
+        <li class="active-page"><a href="#">Home</a></li>
         <hr>
         <li><a href="week1.html">Basics of Music Data</a></li>
         <hr>
