--- a/week1.html
+++ b/week1.html
@@ -26,7 +26,7 @@
     <nav>
         <li><a href="index.html">Home</a></li>
         <hr>
-        <li><a href="#">Basics of Music Data</a></li>
+        <li class="active-page"><a href="#">Basics of Music Data</a></li>
         <hr>
         <li><a href="week2.html">Notation Basics</a></li>
         <hr>
