--- a/week7.html
+++ b/week7.html
@@ -36,7 +36,7 @@
         <hr>
         <li><a href="week5.html">Standards in Curation</a></li>
         <hr>
-        <li><a href="#">Challenges to Music Curation</a></li>
+        <li class="active-page"><a href="#">Challenges to Music Curation</a></li>
         <hr>
         <li><a href="week8.html">Music as Sound</a></li>
         <hr>
