Download link changes, week 5 page.

--- a/week3.html
+++ b/week3.html
@@ -76,6 +76,9 @@
                 });
         </script>
 
+        <p>Download the MEI file <a href="portfolio_assets/week-3/week-3-quartet.mei">here</a>.</p>
+        <p>Download the MusicXML file <a href="portfolio_assets/week-3/week-3-quartet.musicxml">here</a>.</p>
+
         <hr>
 
         <h2>Comparing MusicXML & MEI</h2>
