--- a/week4.html
+++ b/week4.html
@@ -54,7 +54,7 @@
 
         <h2>Extract Features from MIDI</h2>
         <p class="task">Generate a jSymbolic analysis of your piece, and select a group of features that you think is most interesting and relevant to your particular piece.</p>
-        <p>Download the csv <a href="portfolio_assets/week-4/extracted_feature_values.csv" download>here</a>.</p>
+        <p>Download the CSV file <a href="portfolio_assets/week-4/extracted_feature_values.csv" download>here</a>.</p>
 
         <hr>
 
