--- a/week5.html
+++ b/week5.html
@@ -56,12 +56,13 @@
         <p class="task">Create a metadata schema by listing the elements (or a subset of at least 5 elements) that your group chose back on Tuesday.</p>
         <p>Chosen Elements:</p>
         <ul>
-            <li>Name</li>
+            <li>Title</li>
             <li>Author/Composer</li>
             <li>Year Produced/Composed</li>
-            <li>Intrumentation</li>
+            <li>Key</li>
             <li>Tempo</li>
-            <li>Copyright Information</li>
+            <li>Encoder</li>
+            <li>Transcriber</li>
         </ul>
 
         <hr>
@@ -89,6 +90,8 @@
                     app.loadData(text);
                 });
         </script>
+
+        <p>Download the MEI file <a href="portfolio_assets/week-5/week-5-quartet.mei" download>here</a>.</p>
 
     </section>
     
