More week 7 css shenanigans

--- a/week7.html
+++ b/week7.html
@@ -60,17 +60,20 @@
         <h2>Update & Render Metadata</h2>
         <p class="task">Create a second version of your MEI file with the updated metadata. Render your revised MEI metadata along with your score.</p>
 
+        <div id="MEImeta"></div>
         <div id="app">Verovio is loading...</div>
         <script type="module">
             import 'https://www.verovio.org/javascript/app/verovio-app.js';
-
             const options = {
                 defaultView: 'responsive', // default is 'responsive', alternative is 'document'
                 defaultZoom: 3, // 0-7, default is 4
                 enableResponsive: true, // default is true
                 enableDocument: true // default is true
             }
-            var file = "portfolio_assets/week-7/week-7-quartet.mei";
+            // A MusicXML file
+            var file = 'portfolio_assets/week-7/week-7-quartet.mei';
+            // A MEI file
+            //var file = 'https://www.verovio.org/editor/brahms.mei';
             const app = new Verovio.App(document.getElementById("app"), options);
             fetch(file)
                 .then(function(response) {
