--- a/week8.html
+++ b/week8.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="site_assets/styles/styles_main.css">
+    <link rel="stylesheet" href="portfolio_assets/week-8/week-8-styles.css">
     <link rel="shortcut icon" href="site_assets/images/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC|Bebas+Neue|Julius+Sans+One|Open+Sans|Roboto+Condensed&display=swap">
 
@@ -52,8 +53,129 @@
         <h1 class="page_title">Music as Sound</h1>
         <h2 class="page_subtitle">Week 8</h2>
 
-        <h2>Introduction</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus expedita sunt pariatur! Fuga maxime molestiae qui ipsam nisi. Iste fuga dicta dignissimos ut quia, blanditiis alias error sapiente reiciendis libero.</p>
+        <h2>Finding Audio</h2>
+        <p class="task">Identify and download 3 music tracks relating to your theme. Ideally, these should be different in their sound and style.</p>
+
+        <p>Below are three performances of the first movement of Beethoven's String Quartet No. 4.</p>
+        <p>Track 1 - Dover Quartet:</p>
+        <audio controls>
+            <source src="portfolio_assets/week-8/dover.mp3" type="audio/mpeg">
+            Your browser does not support this audio element.
+        </audio>
+        <p>Track 2 - Emerson Quartet:</p>
+        <audio controls>
+            <source src="portfolio_assets/week-8/emerson.ogg" type="audio/ogg">
+            Your browser does not support this audio element.
+        </audio>
+        <p>Track 3 - Menuhin Competition:</p>
+        <audio controls>
+            <source src="portfolio_assets/week-8/menuhin.wav" type="audio/wav">
+            Your browser does not support this audio element.
+        </audio>
+
+        <hr>
+
+        <h2>Describing Audio</h2>
+        <p class="task">Identify and list (in a table) the most important technical and non-technical metadata associated with each track.</p>
+        <br>
+        <table>
+            <tr class="header">
+                <th></th>
+                <th>Track 1</th>
+                <th>Track 2</th>
+                <th>Track 3</th>
+            </tr>
+            <tr>
+                <th>Title</th>
+                <td> Beethoven String Quartet Op. 18 No. 4, Mvt. 1</td>
+                <td>Beethoven: String Quartet No. 4 in C Minor, Op. 18 No. 4 - 1. Allegro ma non tanto</td>
+                <td>L. v. Beethoven: String Quartet No. 4, 1st movement</td>
+            </tr>
+            <tr>
+                <th>Artist(s)</th>
+                <td>Dover Quartet</td>
+                <td>Emerson Quartet</td>
+                <td>Sumina Studer (Violin), Clara Chartré (Violin), Caroline (Viola), Clément Dami (Cello)</td>
+            </tr>
+            <tr>
+                <th>Composer</th>
+                <td>Ludwig van Beethoven</td>
+                <td>Ludwig van Beethoven</td>
+                <td>Ludwig van Beethoven</td>
+            </tr>
+            <tr>
+                <th>Copyright Info.</th>
+                <td>&copy; Dover Quartet 2017</td>
+                <td>&#8471; 1997 Deutsche Grammophon GmbH, Berlin</td>
+                <td>None Specified</td>
+            </tr>
+            <tr>
+                <th>Genre</th>
+                <td>Classical</td>
+                <td>Classical</td>
+                <td>Classical</td>
+            </tr>
+            <tr>
+                <th>Source</th>
+                <td>https://www.youtube.com/watch?v=vn3OdaQtSNY</td>
+                <td>https://www.youtube.com/watch?v=xT56FWW34_U</td>
+                <td>https://www.youtube.com/watch?v=IoP_sTj7pFY</td>
+            </tr>
+            <tr>
+                <th>Audio Format</th>
+                <td>MP3</td>
+                <td>Ogg Vorbis</td>
+                <td>WAV</td>
+            </tr>
+            <tr>
+                <th>Audio Channels</th>
+                <td>2 (Stereo)</td>
+                <td>2 (Stereo)</td>
+                <td>2 (Stereo)</td>
+            </tr>
+            <tr>
+                <th>Sample Rate</th>
+                <td>44.1kHz</td>
+                <td>48kHz</td>
+                <td>48kHz</td>
+            </tr>
+            <tr>
+                <th>Bitrate</th>
+                <td>320kbps</td>
+                <td>1536kbps</td>
+                <td>1536kbps</td>
+            </tr>
+            <tr>
+                <th>Duration</th>
+                <td>7:15</td>
+                <td>8:11</td>
+                <td>6:29</td>
+            </tr>
+        </table>
+
+        <hr>
+
+        <h2>Performing Audio Analysis</h2>
+        <p class="task">For each downloaded track, generate a spectrogram (with log-spaced frequency scale) in SonicVisualizer. Export the waveform and spectrogram in an image format for your GitHub portfolio.</p>
+
+        <p>Dover Waveform:</p>
+        <img src="portfolio_assets/week-8/dover_waveform.png" width="90%">
+        <p>Dover Spectrogram:</p>
+        <img src="portfolio_assets/week-8/dover_spectrogram.png" width="90%">
+        <p>Emerson Waveform:</p>
+        <img src="portfolio_assets/week-8/emerson_waveform.png" width="90%">
+        <p>Emerson Spectrogram:</p>
+        <img src="portfolio_assets/week-8/emerson_spectrogram.png" width="90%">
+        <p>Menuhin Waveform:</p>
+        <img src="portfolio_assets/week-8/menuhin_waveform.png" width="90%">
+        <p>Menuhin Spectrogram:</p>
+        <img src="portfolio_assets/week-8/menuhin_spectrogram.png" width="90%">
+
+        <hr>
+
+        <h2>Comparing Analysis Methods</h2>
+        <p class="task">In 200 words (max), describe at least one advantage of a time-frequency analysis over a waveform-based analysis. Provide at least one example of the identified advantage by referencing a specific subpart of the output from step 1.</p>
+        <p>TODO: That.</p>
 
     </section>
     
