Week 9 page, update head titles

--- a/week4.html
+++ b/week4.html
@@ -15,7 +15,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="site_assets/scripts/scripts_main.js"></script>
     
-    <title>Home - MCA-2022</title>
+    <title>Week 4 - MCA-2022</title>
     
 </head>
 
