--- a/week7.html
+++ b/week7.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="portfolio_assets/week-7/style.css">
     <script src="portfolio_assets/week-7/CETEI.js"></script>
     
-    <title>Home - MCA-2022</title>
+    <title>Week 7 - MCA-2022</title>
     
 </head>
 
