--- a/week8.html
+++ b/week8.html
@@ -9,14 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="site_assets/styles/styles_main.css">
-    <link rel="stylesheet" href="portfolio_assets/week-8/week-8-styles.css">
     <link rel="shortcut icon" href="site_assets/images/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC|Bebas+Neue|Julius+Sans+One|Open+Sans|Roboto+Condensed&display=swap">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="site_assets/scripts/scripts_main.js"></script>
     
-    <title>Home - MCA-2022</title>
+    <title>Week 8 - MCA-2022</title>
     
 </head>
 
@@ -59,17 +58,17 @@
         <p>Below are three performances of the first movement of Beethoven's String Quartet No. 4.</p>
         <p>Track 1 - Dover Quartet:</p>
         <audio controls>
-            <source src="portfolio_assets/week-8/dover.mp3" type="audio/mpeg">
+            <source src="portfolio_assets/week-8/dover/dover.mp3" type="audio/mpeg">
             Your browser does not support this audio element.
         </audio>
         <p>Track 2 - Emerson Quartet:</p>
         <audio controls>
-            <source src="portfolio_assets/week-8/emerson.ogg" type="audio/ogg">
+            <source src="portfolio_assets/week-8/emerson/emerson.ogg" type="audio/ogg">
             Your browser does not support this audio element.
         </audio>
         <p>Track 3 - Menuhin Competition:</p>
         <audio controls>
-            <source src="portfolio_assets/week-8/menuhin.wav" type="audio/wav">
+            <source src="portfolio_assets/week-8/menuhin/menuhin.wav" type="audio/wav">
             Your browser does not support this audio element.
         </audio>
 
@@ -158,18 +157,21 @@
         <h2>Performing Audio Analysis</h2>
         <p class="task">For each downloaded track, generate a spectrogram (with log-spaced frequency scale) in SonicVisualizer. Export the waveform and spectrogram in an image format for your GitHub portfolio.</p>
 
-        <p>Dover Waveform:</p>
-        <img src="portfolio_assets/week-8/dover_waveform.png" width="90%">
-        <p>Dover Spectrogram:</p>
-        <img src="portfolio_assets/week-8/dover_spectrogram.png" width="90%">
-        <p>Emerson Waveform:</p>
-        <img src="portfolio_assets/week-8/emerson_waveform.png" width="90%">
-        <p>Emerson Spectrogram:</p>
-        <img src="portfolio_assets/week-8/emerson_spectrogram.png" width="90%">
-        <p>Menuhin Waveform:</p>
-        <img src="portfolio_assets/week-8/menuhin_waveform.png" width="90%">
-        <p>Menuhin Spectrogram:</p>
-        <img src="portfolio_assets/week-8/menuhin_spectrogram.png" width="90%">
+        <h3>Dover Quartet</h3>
+        <p>Waveform:</p>
+        <img src="portfolio_assets/week-8/dover/dover_waveform.png" width="90%">
+        <p>Spectrogram:</p>
+        <img src="portfolio_assets/week-8/dover/dover_spectrogram.png" width="90%">
+        <h3>Emerson Quartet</h3>
+        <p>Waveform:</p>
+        <img src="portfolio_assets/week-8/emerson/emerson_waveform.png" width="90%">
+        <p>Spectrogram:</p>
+        <img src="portfolio_assets/week-8/emerson/emerson_spectrogram.png" width="90%">
+        <h3>Menuhin Competition</h3>
+        <p>Waveform:</p>
+        <img src="portfolio_assets/week-8/menuhin/menuhin_waveform.png" width="90%">
+        <p>Spectrogram:</p>
+        <img src="portfolio_assets/week-8/menuhin/menuhin_spectrogram.png" width="90%">
 
         <hr>
 
